--- a/index.html
+++ b/index.html
@@ -5,52 +5,52 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
-  <body>
-    <header>
-      <div class="aaa">
+  <body class="todo-app">
+    <header class="todo-app__header">
+      <div class="todo-app__header-box">
         <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
         <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
     </header>
-    <main>
-      <div class="centered-main-page-element">
-        <section>
-          <div id="topSectionForAddingElementToList">        
-            <label for="new-task">Add Item</label>
-            <div class="task-row-wrapper">
-              <input id="new-task" class="task" type="text">
-              <button>Add</button>
+    <main class="todo-app__main">
+      <div class="todo-app__main-box">
+        <section class="todo-app__section">
+          <div class="todo-app__new-task-box">        
+            <label class="todo-app__label" for="new-task">Add Item</label>
+            <div class="todo-app__task-row-wrapper">
+              <input id="new-task" class="todo-app__task" type="text">
+              <button class="todo-app__add">Add</button>
             </div>
           </div>
         </section>
-        <section>
-          <h3>Todo</h3>
-          <ul id="incompleteTasks">
-            <li>
-              <input type="checkbox">
-              <label class="task">Pay Bills</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg" alt="Delete Button"></button>
+        <section class="todo-app__section">
+          <h3 class="todo-app__title">Todo</h3>
+          <ul class="todo-app__list" id="incompleteTasks">
+            <li class="todo-app__item">
+              <input class="todo-app__checkbox" type="checkbox">
+              <label class="todo-app__item-label">Pay Bills</label>
+              <input class="todo-app__item-input" type="text" class="task">
+              <button class="todo-app__edit">Edit</button>
+              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
             </li>
-            <li class="editMode">
-              <input type="checkbox">
-              <label class="task">Go Shopping</label>
-              <input type="text" value="Go Shopping" class="task">
-              <button class="edit">Save</button>
-              <button class="delete"><img src="./remove.svg" alt="Delete Button"></button>
+            <li class="todo-app__item_edit">
+              <input class="todo-app__checkbox" type="checkbox">
+              <label class="todo-app__item-label">Go Shopping</label>
+              <input class="todo-app__item-input" type="text" value="Go Shopping">
+              <button class="todo-app__edit">Save</button>
+              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
             </li>
           </ul>
         </section>
         <section>
-          <h3>Completed</h3>
-          <ul id="completed-tasks">
-            <li>
-              <input type="checkbox" checked>
-              <label class="task">See the Doctor</label>
-              <input type="text" class="task">
-              <button class="edit">Edit</button>
-              <button class="delete"><img src="./remove.svg" alt="Delete Button"></button>
+          <h3 class="todo-app__title">Completed</h3>
+          <ul class="todo-app__list" id="completed-tasks">
+            <li class="todo-app__item">
+              <input class="todo-app__checkbox" type="checkbox" checked>
+              <label class="todo-app__item-label">See the Doctor</label>
+              <input class="todo-app__item-input" type="text">
+              <button class="todo-app__edit">Edit</button>
+              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
             </li>
           </ul>
         </section>
