--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   </head>
   <body class="todo-app">
     <header class="todo-app__header">
-      <div class="todo-app__header-box">
-        <img src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
-        <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <div class="header__box">
+        <img class="header__image" src="./eisenhower-matrix.jpg" alt="Eisenhower Matrix">
+        <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
       </div>
     </header>
     <main class="todo-app__main">
@@ -19,7 +19,7 @@
             <label class="todo-app__label" for="new-task">Add Item</label>
             <div class="todo-app__task-row-wrapper">
               <input id="new-task" class="todo-app__task" type="text">
-              <button class="todo-app__add">Add</button>
+              <button class="add todo-app__button">Add</button>
             </div>
           </div>
         </section>
@@ -30,15 +30,19 @@
               <input class="todo-app__checkbox" type="checkbox">
               <label class="todo-app__item-label">Pay Bills</label>
               <input class="todo-app__item-input" type="text" class="task">
-              <button class="todo-app__edit">Edit</button>
-              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
+              <button class="edit todo-app__button">Edit</button>
+              <button class="delete todo-app__button">
+                <img class="delete__image" src="./remove.svg" alt="Delete Button">
+              </button>
             </li>
-            <li class="todo-app__item_edit">
+            <li class="todo-app__item">
               <input class="todo-app__checkbox" type="checkbox">
-              <label class="todo-app__item-label">Go Shopping</label>
-              <input class="todo-app__item-input" type="text" value="Go Shopping">
-              <button class="todo-app__edit">Save</button>
-              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
+              <label class="todo-app__item-label_edit">Go Shopping</label>
+              <input class="todo-app__item-input_edit" type="text" value="Go Shopping">
+              <button class="edit todo-app__button">Save</button>
+              <button class="delete todo-app__button">
+                <img class="delete__image" src="./remove.svg" alt="Delete Button">
+              </button>
             </li>
           </ul>
         </section>
@@ -47,10 +51,12 @@
           <ul class="todo-app__list" id="completed-tasks">
             <li class="todo-app__item">
               <input class="todo-app__checkbox" type="checkbox" checked>
-              <label class="todo-app__item-label">See the Doctor</label>
+              <label class="todo-app__item-label_complited">See the Doctor</label>
               <input class="todo-app__item-input" type="text">
-              <button class="todo-app__edit">Edit</button>
-              <button class="todo-app__delete"><img src="./remove.svg" alt="Delete Button"></button>
+              <button class="edit todo-app__button">Edit</button>
+              <button class="delete todo-app__button">
+                <img class="delete__image" src="./remove.svg" alt="Delete Button">
+              </button>
             </li>
           </ul>
         </section>
