fix(extended-2.1): change js logic using new class names

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <img class="delete__image" src="./remove.svg" alt="Delete Button">
               </button>
             </li>
-            <li class="todo-app__item">
+            <li class="todo-app__item_edit">
               <input class="todo-app__checkbox" type="checkbox">
               <label class="todo-app__item-label_edit">Go Shopping</label>
               <input class="todo-app__item-input_edit" type="text" value="Go Shopping">
@@ -51,7 +51,7 @@
           <ul class="todo-app__list" id="completed-tasks">
             <li class="todo-app__item">
               <input class="todo-app__checkbox" type="checkbox" checked>
-              <label class="todo-app__item-label_complited">See the Doctor</label>
+              <label class="todo-app__item-label complited">See the Doctor</label>
               <input class="todo-app__item-input" type="text">
               <button class="edit todo-app__button">Edit</button>
               <button class="delete todo-app__button">
